crates/wdl-grammar/tests/parsing/empty-array-type/source.wdl
# This is a test of parsing an empty array type.

version 1.1

struct Foo {
    Array[] a
}
